--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <h1>WP WEBSITE</h1>
         <div id = "myDiv">
-            
+            <div id = "player"></div>
         </div>
 
     </body>
