--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 
     <h1>WP WEBSITE</h1>
 
-    <div id = "myDiv">
-        <div id = "player"></div>
-    </div>
-
+    <canvas width="800" height="500"></canvas>
+    <img class="hidden sheet" src="player.png" data-id="player">
+    <!--spritesheets are imgs to avoid having to use fetch-->
 </body>
 
 <script src = app.js></script>
