disable image smoothing, split app.js into engine.js and game.js

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!--spritesheets are imgs to avoid having to use fetch-->
 </body>
 
-<script src = app.js></script>
+<script src="engine.js"></script>
+<script src="game.js"></script>
 
 </html>
