full page canvas

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <h1>WP WEBSITE</h1>
 
-    <canvas width="960" height="540"></canvas>
+    <canvas width=window. innerWidth height=window. innerHeight></canvas>
     <img class="hidden sheet" src="player.png" data-id="player">
     <!--spritesheets are imgs to avoid having to use fetch-->
 </body>
