--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <h1>WP WEBSITE</h1>
 
-    <canvas width="screen.width" height="screen.height"></canvas>
+    <canvas width="1080" height="540"></canvas>
     <img class="hidden sheet" src="player.png" data-id="player">
     <!--spritesheets are imgs to avoid having to use fetch-->
 </body>
